fixing double borders  in table in desktop

--- a/src/app/pages/order-page/product-entry/product-entry.css
+++ b/src/app/pages/order-page/product-entry/product-entry.css
@@ -211,7 +211,10 @@
     display: inline-flex;
     align-items: center;
     border: 1px solid #E5E7EB;
-    border-radius: 6px;
+    border-radius: 10px;
   }
 
+   :host(.last-item) > * {
+    border-bottom: none;
+  }
 }
